[package]
name = "orange-router"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
regex = "1.9.3"
serde_json = "1.0.104"
sha2 = "0.10.7"
reqwest = { version = "0.11.18", features = ["json", "cookies"] }
tokio = { version = "1.30.0", features = ["full"] }
dotenv = "0.15.0"
clearscreen = "2.0.1"

